cabal-version:      2.4
name:               persona3-hacker
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable persona3-hacker
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.15.0.0,
      mtl,
      base64 ^>=0.4.2.3,
      text ^>=1.2.4.1,
      bytestring ^>=0.10.8.2
    hs-source-dirs:   src
    other-modules: 
      Characters.Fuuka,
      Characters.Hidetoshi,
      Characters.Kenji,
      Characters.Mitsuru,
      Characters.Emiri,
      Characters.Bunkichi,
      Characters.Mitsuko,
      Characters.Yukari,
      Characters.Kazushi,
      Characters.Chihiro,
      Characters.Maya,
      Characters.Keisuke,
      Characters.Yuko,
      Characters.Maiko,
      Characters.Ryoji,
      Characters.Andre,
      Characters.Tanaka,
      Characters.Mutatsu,
      Characters.Mamoru,
      Characters.Nozomi,
      Characters.Akinari,
      Characters.Aigis,
      Enemies.Nyx,
      Enemies.CarnalSnake,
      Enemies.FierceCyclops,
      Enemies.JotunOfGrief,
      Enemies.NobleSeeker,
      Enemies.WorldBalance,
      Tartarus,
      SocialLinks.Emperor,
      SocialLinks.Empress,
      SocialLinks.Fool,
      SocialLinks.Magician,
      SocialLinks.Priestess,
      SocialLinks.Hierophant
      SocialLinks.Lovers,
      SocialLinks.Chariot,
      SocialLinks.Justice,
      SocialLinks.Hermit,
      SocialLinks.Fortune,
      SocialLinks.Strength,
      SocialLinks.HangedMan,
      SocialLinks.Death,
      SocialLinks.Temperance,
      SocialLinks.Devil,
      SocialLinks.Tower,
      SocialLinks.Star,
      SocialLinks.Moon,
      SocialLinks.Sun,
      SocialLinks.Judgement,
      SocialLinks.Aeon,
      SocialLink,
      Sees
    default-language: Haskell2010
